--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <body>
 
               <ul>
-  <li style="float: left;"><a href="elevate.html"> <img width="295px" height="75px" src="whiteElevate2.png" style="padding-bottom: 20px;"></a></li>
+  <li style="float: left;"><a href="index.html"> <img width="295px" height="75px" src="whiteElevate2.png" style="padding-bottom: 20px;"></a></li>
     <li style="font-size: 30px; margin-top: 20px;"><a href="team.html">Team</a></li>
   <li style="font-size: 30px; margin-top: 20px;"><a href="platform.html">Platform</a></li>
 </ul>
