--- a/team.html
+++ b/team.html
@@ -9,7 +9,7 @@
           <body>
 
               <ul>
-  <li style="float: left;"><a href="elevate.html"> <img width="295px" height="75px" src="whiteElevate2.png" style="padding-bottom: 25px;"></a></li>
+  <li style="float: left;"><a href="index.html"> <img width="295px" height="75px" src="whiteElevate2.png" style="padding-bottom: 25px;"></a></li>
   <li style="font-size: 30px; margin-top: 15px;"><a href="platform.html">Platform</a></li>
   <li style="font-size: 30px; margin-top: 15px;"><a href="index.html">Home</a></li>
 </ul>
