--- a/platform.html
+++ b/platform.html
@@ -35,7 +35,7 @@
     <div class="container" style="padding-top: 30px; padding-bottom: 25px;">
 <h1 style="color:#1d2951";>Our Vision</h2>
 <h1 style="color:#1d2951";>Below we've highlighted a few key issues we're passionate about. If you want a full debriefing click the icon below for the full picture.</h2>
-<a href="https://docs.google.com/document/d/1JRK3Bfc985oEHsB7hUaOcbN4SyUGzZeECw78giOjTJI/edit?usp=sharing" download="platpoint.pdf">  <img src="pdf.png" width="100" height="100" class="center"></a>
+<a href="policies.pdf" download="policies.pdf">  <img src="pdf.png" width="100" height="100" class="center"></a>
 </div>
 
 
