--- a/platform.html
+++ b/platform.html
@@ -57,12 +57,14 @@
    <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
 <h1 style="color: white;">Emotional Wellness & Mental Health</h1>
 <p style="color: white;">Establish Student Advisory Board in CAPS </p>
-<p style="color: white;">Support students as IU returns to in-person in the fall</p>
 <p style="color: white;">Encourage the Growth of Recreational Sports</p>
 <p style="color: white;">Diversify CAPS staff, resources and programming with 7 new counselors</p>
-<p style="color: white;">Student organization mental health education</p>
-<p style="color: white;">Enforce research into the consequences of inaccessible mental health counseling at a PWI
-</p>
+<p style="color: white;">Increase Student organization mental health education</p>
+<p style="color: white;">Enforce research into the consequences of inaccessible mental health
+counseling at a PWI</p>
+<p style="color: white;">Fight for Staff and Faculty to obtain gatekeeper training, mental health first-aid
+programs, and cultural competency training.</p>
+<p style="color: white;">Advocate for a mental health/wellness space on campus!</p>
 </div>
 </div>
 
@@ -74,10 +76,71 @@
 <p style="color: white;">Support and uplift student workers through suitable experiences and safety training</p>
 <p style="color: white;">Advocate with RAs for their mistreatment by Residential Programming Services</p>
 <p style="color: white;">Promote food security and promote programs addressing food insecurity</p>
+<p style="color: white;">Work to lower parking ticket fees</p>
 </div>
 </div>
 
 <div class="below4">
+  <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Academic Affairs & Professional Development</h1>
+<p style="color: white;">Reform the Academic Advising experience to integrate inclusive protocols</p>
+<p style="color: white;">Scrap attendance Policies</p>
+<p style="color: white;">Implement flexible in-person, online and hybrid course models into Fall 2021</p>
+<p style="color: white;">Seniors automatic enrollment into waitlisted courses needed for graduation</p>
+</div>
+</div>
+ 
+<div class="below2">
+<div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Civic Engagement & Public Service</h1>
+<p style="color: white;">Expanding the Indiana Lifeline Law to protect the person in need of medical
+assistance</p>
+<p style="color: white;">Student Council member that represents IU students on Bloomington City
+Council</p>
+<p style="color: white;">Coalition building/student unity amongst student organizations</p>
+<p style="color: white;">Engage with, promote, and support Bloomington Grassroot Coalition’s</p>
+</div>
+</div>
+
+
+          <div class="below3">
+   <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Graduate & Professional Students</h1>
+<p style="color: white;">Support Graduate Student Worker coalition demands</p>
+</div>
+</div>
+
+
+          <div class="below">
+   <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Student Safety & Sexual Assault Prevention</h1>
+<p style="color: white;">Recommend Title IX Sexual Misconduct Policies to protect survivors</p>
+<p style="color: white;">Expand IU Notifications to off-campus student apartments</p>
+<p style="color: white;">Extend and increase map of blue safety lights around campus</p>
+</div>
+</div>
+
+<div class="below4">
+  <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Sustainability</h1>
+<p style="color: white;"> Green cleaning products for increased sanitation </p>
+<p style="color: white;">Encourage all student organization events to be green certified</p>
+<p style="color: white;">Push for the buildings to be LEED certified on campus</p>
+<p style="color: white;">Commit to achieving carbon neutrality by 2040 or sooner</p>
+<p style="color: white;">Push for IU to divest from fossil fuel companies</p>
+</div>
+</div>                 
+                 
+<div class="below2">
+  <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
+<h1 style="color: white;">Restructuring IUSG</h1>
+<p style="color: white;">Establish Advocacy Office</p>
+<p style="color: white;">Elevating transparency between students and IUSG with frequent social media
+updates from all three branches</p>
+</div>
+</div>   
+                 
+<div class="below3">
   <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
 <p style="color:white;">As a student body goverment your voices matter the most. If you have any suggestions please fill the survey below.</p>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSc8JHFUmXDenAmrpZsdOXShtoN-nxcTJxb7GFc1KzGEe80P4Q/viewform?fbclid=IwAR101KwpFfVXOxx95D5gcqnD47pqsv9JTISE4M0pHCx31VUDSGkUfUBPDNc">  <img src="https://www.freeiconspng.com/uploads/survey-icon-7.png" width="100" height="100" class="center"></a>
