--- a/platform.html
+++ b/platform.html
@@ -144,9 +144,10 @@ updates from all three branches</p>
   <div class="container" style="padding-top: 15px; padding-bottom: 15px;">
 <p style="color:white;">As a student body goverment your voices matter the most. If you have any suggestions please fill the survey below.</p>
 <a href="https://docs.google.com/forms/d/e/1FAIpQLSc8JHFUmXDenAmrpZsdOXShtoN-nxcTJxb7GFc1KzGEe80P4Q/viewform?fbclid=IwAR101KwpFfVXOxx95D5gcqnD47pqsv9JTISE4M0pHCx31VUDSGkUfUBPDNc">  <img src="https://www.freeiconspng.com/uploads/survey-icon-7.png" width="100" height="100" class="center"></a>
+</div>
+</div>
 
-
-
+<div class="below">
 <h2 style="color:white;">Ky Freeman & Madeline Dederichs</h2>
 <p style="color:white; text-align: center;">For Student Body President & Vice President</p>
 </div>
