--- a/platform.html
+++ b/platform.html
@@ -149,6 +149,7 @@ updates from all three branches</p>
 
 <div class="below">
 <h2 style="color:white;">Ky Freeman & Madeline Dederichs</h2>
+<div class="container" style="padding-top: 15px; padding-bottom: 15px;">
 <p style="color:white; text-align: center;">For Student Body President & Vice President</p>
 </div>
 </div>
