--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <!--Add the URL for the header image here-->
             <style type="text/css">
               .header {
-                background: url('websitephoto.jpg');
+                background: url('websitephotofin.jpg');
                 background-repeat: no-repeat;
                 background-size: 100% 100%;
               }
